--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for SupremeMelee
 
+1.0.4.0 - Mod updated for 1.3 and passed autotests
+
+
 1.0.3.0 - Better error-handling, via Taranchuk
 
 
