--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for SupremeMelee
 
+1.0.5.0 - Spelling and grammar fixes, thanks fikealox!
+
+
 1.0.4.0 - Mod updated for 1.3 and passed autotests
 
 
