--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for SupremeMelee
 
+1.4.1 - Mod updated for 1.4 and passed autotests.
+Used DeepL to update translations for ChineseSimplified, French, German, Russian
+
+
 1.0.5.0 - Spelling and grammar fixes, thanks fikealox!
 
 
