Updated reference to the continued version of [SYR] Trait Value

--- a/Languages/English/Keyed/SupremeMelee.xml
+++ b/Languages/English/Keyed/SupremeMelee.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <SupremeMelee_DualWieldingFactor>Dual wielding modifier</SupremeMelee_DualWieldingFactor>
   <SupremeMelee_VerboseParryReadout>Verbose parry mote message (Default: False)</SupremeMelee_VerboseParryReadout>
